Updated draft of a SQL Basics Rework

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -244,7 +244,6 @@ On this level you learn how to use the most important filter of all - date filte
 - [Conversion functions](./sfmc-sql-conversion-functions.mdx) - whole article, but treat Data Types and Data Style Codes more as a reference material.
 - [_Bounce](../config/sfmc-system-data-views.mdx#_bounce) Data View.
 
-
 #### Check your skills
 
 <Tabs
@@ -286,7 +285,46 @@ Bonus: Dive deeper into bounces by selecting SMTPBounceReason and SMTPMessage in
 
 ---
 
-### Level 5
+### Level 5 - Multiple JOINS, UNION, INTERSECT and EXCEPT
+
+#### Learning materials
+
+- [JOINs](./sfmc-sql-join.mdx#multiple-joins) - yup, everything. The Cheat Sheet at the end should be useful to better visualize multi-JOIN fun.
+- [Journey Builder Data Views](../config/sfmc-system-data-views.mdx#journey-data-views) - both _Journey and _JourneyActivity.
+
+#### Check your skills
+
+<Tabs
+    defaultValue='exercise'
+    values={[
+        {label: 'Exercise', value: 'exercise'},
+        {label: 'Hints', value: 'hints'},
+        {label: 'Solution', value: 'solution'},
+    ]}
+>
+<TabItem value='exercise'>
+
+
+</TabItem>
+<TabItem value='hints'>
+
+1.
+
+</TabItem>
+<TabItem value='solution'>
+
+```sql title="Solution working on Parent Business Unit"
+
+```
+
+Bonus:
+
+</TabItem>
+</Tabs>
+
+---
+
+### Level 6 - GROUP, COUNT, TOP and HAVING
 
 #### Learning materials
 
@@ -323,6 +361,14 @@ Bonus:
 </Tabs>
 
 ---
+
+### Level 7 - coming soon-ish
+
+More levels will be added once supporting learning materials are complete :)
+
+---
+
+## Writing with style
 
 Knowing the available functions is one thing. Writing good and readable queries - another. Salesforce Marketing Cloud is always a team sport, so be sure to leverage the power of a [Style Guide](./sfmc-sql-style-guide.mdx) to improve the quality of your SQL.
 
