--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -147,7 +147,7 @@ Write a query that will find Subscriber Key for all Active (opted-in) Subscriber
 
 ```sql title="Solution working on Parent Business Unit"
 SELECT sub.SubscriberKey
-FROM _Subscribers AS sub
+FROM _Subscribers   AS sub
     LEFT JOIN _Sent AS sent
         ON sent.SubscriberKey = sub.SubscriberKey
 WHERE
@@ -263,15 +263,18 @@ For the purpose of this exercise we will assume that Google users have emails `s
 </TabItem>
 <TabItem value='hints'>
 
-1.
+1. Consider impact of the [JOIN type](./sfmc-sql-join.mdx#join-types) on the query output. Can you leverage it to minimise the data you are working on?
+2. When writing date comparision filter, take a pen and paper and draw a timeline with area you want to capture. Seeing it makes it much easier to write it correctly.
+3. When deciding on whether to use shorthands - go with the most readable option.
 
 </TabItem>
 <TabItem value='solution'>
 
 ```sql title="Solution working on Parent Business Unit"
 SELECT sub.SubscriberKey
-FROM _Subscribers AS sub
-    INNER JOIN _Bounce AS b
+FROM _Subscribers       AS sub
+    INNER JOIN _Bounce  AS b
+        ON b.SubscriberKey = sub.SubscriberKey
 WHERE
     sub.DateJoined >= DATEADD(YEAR, -1, GETDATE())
     AND b.Domain IN ('gmail.com', 'outlook.com', 'yahoo.com')
@@ -286,6 +289,8 @@ Bonus: Dive deeper into bounces by selecting SMTPBounceReason and SMTPMessage in
 ---
 
 ### Level 5 - Multiple JOINS, UNION, INTERSECT and EXCEPT
+
+On this level you will be able to leverage data from multiple tables - the only limitations will be creativity and autokill function crashing queries after 30 minutes of execution ;)
 
 #### Learning materials
 
@@ -304,20 +309,47 @@ Bonus: Dive deeper into bounces by selecting SMTPBounceReason and SMTPMessage in
 >
 <TabItem value='exercise'>
 
+Find some active Journey from the last quarter that already had some email sends with engagement. Note name of the Journey and Email Acitvity.
+
+Write a query that will find Subscriber Key and Email Address for all Subscribers in your All Subscribers list that clicked a link in the first email activity in the Journey you selected.
+
+Append a proof record with Subscriber Key equal to `level5exercise` and your email address.
 
 </TabItem>
 <TabItem value='hints'>
 
-1.
+1. Think which tables are needed for the task. The less, the better.
+2. Think what [types of JOINs](./sfmc-sql-join.mdx#join-types) will be needed. To make it easier - take a pen and paper and draw a diagram. Seriously, it's super helpful as amount of tables grow.
+3. Think on what columns you can join the tables in a way that will protect you from the fan out (one to many relationship that results with more rows then needed in the output).
+4. [UNION](./sfmc-sql-join.mdx#union) with [aliases](./sfmc-sql-select.mdx#aliasing-with-as) is great for arbitrary added records in SQL.
 
 </TabItem>
 <TabItem value='solution'>
 
 ```sql title="Solution working on Parent Business Unit"
+SELECT
+      sub.SubscriberKey
+    , sub.EmailAddress
+FROM _Subscribers               AS sub
+    INNER JOIN _Click           AS c
+        ON c.SubscriberKey = sub.SubscriberKey
+        AND c.IsUnique = 1
+    INNER JOIN _JourneyActivity AS ja
+        ON ja.JourneyActivityObjectID = c.TriggererSendDefinitionObjectID
+    INNER JOIN _Journey         AS j
+        ON j.VersionID = ja.VersionID
+WHERE
+    j.JourneyName = 'SelectedJourneyName'
+    AND ja.ActivityName = 'SelectedEmailActivityName'
 
+UNION
+
+SELECT
+      'level5exercise'      AS SubscriberKey
+    , 'your@email.address'  AS EmailAddress
 ```
 
-Bonus:
+Bonus: the fun with multiple joins [never ends](./snippets/sfmc-sql-debugging-email-sends.mdx#solution).
 
 </TabItem>
 </Tabs>
@@ -326,9 +358,13 @@ Bonus:
 
 ### Level 6 - GROUP, COUNT, TOP and HAVING
 
+On this level you graduate from just playing with rows and start calculating the data to see patterns, outliers and problems. This is especially useful for SFMC Administrators and Consultants performing analysis on the platform data.
+
 #### Learning materials
 
--
+- [Aggregate functions](./sfmc-sql-aggregate-functions.mdx) - focus on [GROUP BY](./sfmc-sql-aggregate-functions.mdx#group-by), [COUNT](./sfmc-sql-aggregate-functions.mdx#count) and [HAVING](./sfmc-sql-aggregate-functions.mdx#having).
+- [Order of operations](#order-of-operations) - this is the moment when it becomes tricky.
+- [TOP](./sfmc-sql-select.mdx#top) - focus on how to use it with [ORDER BY](./sfmc-sql-select.mdx#top-with-order-by)
 
 #### Check your skills
 
@@ -342,20 +378,42 @@ Bonus:
 >
 <TabItem value='exercise'>
 
+Find the number of sends, unique bounces and the bounce rate (percent of bounces vs sends) per domain from deliveries attempted in the last month. Filter the records to only those who have at least 100 sends. Order by the bounce rate descending and limit to 20 records.
+
+If you have huge send volumes, feel free to change the timeframe from last month to last week for the purpose of the exercise.
 
 </TabItem>
 <TabItem value='hints'>
 
 1.
 
+9. When calculating Bounce Rate, do it so that the outcome is integer equal to a percent.
+
+Important: Because of the Query Studio bug, you cannot have spaces around the multiplication symbol (`*`) as otherwise you will be seeing an error related to bad practice SELECTs.
+
 </TabItem>
 <TabItem value='solution'>
 
 ```sql title="Solution working on Parent Business Unit"
-
+SELECT TOP 20
+      s.Domain
+    , COUNT(s.EventDate)    AS SendCount
+    , COUNT(b.EventDate)    AS BounceCount
+    , COUNT(b.EventDate)*100/COUNT(s.EventDate) AS BounceRate
+FROM _Sent AS s
+    LEFT JOIN _Bounce AS b
+        ON b.JobID = s.JobID
+        AND b.ListID = s.ListID
+        AND b.BatchID = s.BatchID
+        AND b.SubscriberID = s.SubscriberID
+        AND b.IsUnique = 1
+WHERE s.EventDate >= DATEADD(MONTH, -1, GETDATE())
+GROUP BY s.Domain
+HAVING COUNT(s.EventDate) >= 100
+ORDER BY COUNT(b.EventDate)*100/COUNT(s.EventDate) DESC
 ```
 
-Bonus:
+Bonus: This query might be performance heavy. One option to make it perform better is to shorten the timeframe in WHERE fitler. Another would be to split this query into two - one getting cumulative counts and second responsible for doing math for Bounce Rate.
 
 </TabItem>
 </Tabs>
@@ -364,7 +422,7 @@ Bonus:
 
 ### Level 7 - coming soon-ish
 
-More levels will be added once supporting learning materials are complete :)
+More levels will be added once I finsih writing supporting learning materials :)
 
 ---
 
