--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -16,42 +16,42 @@ import DocCardList from '@theme/DocCardList';
 
 ## How to segment data in Marketing Cloud
 
-Salesforce Marketing Cloud offers few different ways of segmenting data for your marketing needs. Out-of-the-box, you can use Filters and SQL Query Activities.
+Salesforce Marketing Cloud offers a few ways of segmenting data for your marketing needs. Out of the box, you can use Filters and SQL Query Activities.
 
-Filters are strightforward, drag-and-drop solution for one-time (Filtered Data Extensions) or refreshed on schedule (Data Filters with Automation) segmentation. Unfortunatelly, they are very limited, as they allow you to just copy single Data Extension with all its columns with filtered down amount of rows. That filtering can leverage source Data Extension values, another Data Extension values (through Data Relationship) or Measures. That's it. For real Marketing Automation, it's not enough.
+Filters are a straightforward drag-and-drop solution for one-time (Filtered Data Extensions) or refreshed on-schedule (Data Filters with Automation) segmentation. Unfortunately, they are constrained, as they allow you to copy a single Data Extension with all its columns and filtered-down rows. That filtering can leverage source Data Extension values, another Data Extension values (through Data Relationship) or Measures. That's it. For real Marketing Automation, it's not enough.
 
-This is why you are looking to learn about SFMC SQL. Along with Automation Studio Query Activity it will allow you to deploy any segmentation scenario you might want with full control over the output columns, names and values. However, with great power comes some learning required.
+This is why you are looking to learn about SFMC SQL. Along with Automation Studio Query Activity, it will allow you to deploy any segmentation scenario you want with complete control over the output columns, names and values. However, with great power comes some learning required.
 
-There is also a third way - paid AppExchange solutions that offer you a way to eat a cookie and have a cookie: full power of SQL with a drag-and-drop interface. For a price.
+There is also a third way - paid AppExchange solutions that offer you a way to eat a cookie and have a cookie: the full power of SQL with a drag-and-drop interface. For a price.
 
-You can check my comparision of all above options in my [here](../config/sfmc-appexchange-solutions.mdx#sfmc-segmentation-solutions). In this article we will focus only on the most powerful and free option - SFMC SQL.
+You can check my comparison of all the above options in my [here](../config/sfmc-appexchange-solutions.mdx#sfmc-segmentation-solutions). This article will focus only on the most powerful and free option - SFMC SQL.
 
 ## SQL in Salesforce Marketing Cloud
 
-SQL (Structured Query Language) is one of the best ways to work with relational databases. And Marketing Cloud's Data Extensions, with the help of Data Designer, offers precisely that. A relational database. Same for system Data Views containing tracking data. Because of this, SQL is used in SFMC whenever powerful segmentation is needed (mostly using Automation Studio).
+SQL (Structured Query Language) is one of the best ways to work with relational databases. And Marketing Cloud's Data Extensions, with the help of Data Designer, offer precisely that. A relational database. The same is valid for system Data Views containing tracking data. Because of this, SQL is used in SFMC whenever powerful segmentation is needed (mainly using Automation Studio).
 
-The main difference from standard SQL (SFMC uses more or less SQL Server 2016) is that SFMC supports only `SELECT` statement. Neither `INSERT`, `UPDATE` or `DELETE` are officially supported. It is because the queries are executed as a part of the backend query and are limited to provide non-breakable functionality.
+The main difference from standard SQL (SFMC uses more or less SQL Server 2016) is that SFMC supports only the `SELECT` statement. Neither `INSERT`, `UPDATE` or `DELETE` are officially supported. It is because the queries are executed as a part of the backend query and are limited to provide non-breakable functionality.
 
 Another limiting characteristic of SFMC SQL is visible in the data accessible by queries. Only data stored in data extensions or system data views is available. Moreover, you can save the results only to the data extensions. The reason is other data structures of SFMC are not relational databases.
 
-Finally, the significant limitation that you might hit as your Marketing Cloud grows is the AutoKill. It will automatically stop your query if execution time exceeds the 30 minutes limit. Think about the query with the future in mind. It is especially important for queries that are supposed to be backbones of your data management flow in Marketing Cloud. Even if it works great now, consider how it will behave once you have more data in the system. One of the great ways to not trigger AutoKill is to implement retention periods for the Data Extensions used in the query to limit input data.
+Finally, the significant limitation you might hit as your Marketing Cloud grows is AutoKill. It will automatically stop your query if the execution time exceeds the 30 minutes limit. Think about the query with the future in mind. It is vital for queries that are supposed to be the backbones of your data management flow in Marketing Cloud. Even if it works great now, consider how it will behave once you have more data in the system. One of the great ways to not trigger AutoKill is to implement retention periods for the Data Extensions used in the query to limit input data.
 
 ## Where to learn SFMC SQL
 
-Before we start witht the real deal, let's cover where to learn writing SQL. My recommendation is to get a [Query Studio](../config/sfmc-appexchange-solutions.mdx#query-studio). It's a free AppExchange add-on to Marketing Cloud developed by Salesforce. While it has its cons, it's perfect for quickly learning how to query.
+Before we start with the real deal, let's cover where to learn to write SQL. I recommend getting a [Query Studio](../config/sfmc-appexchange-solutions.mdx#query-studio). It's a free AppExchange add-on to Marketing Cloud developed by Salesforce. While it has cons, it's perfect for quickly learning how to query.
 
-If you cannot install this app in your Marketing Cloud, you still can learn using Query Activities in Automation Studio, but it will be much less user-friendly. For each change in the query you will have to update the target Data Extension manually and go through multiple steps across the platform to see the results.
+If you cannot install this app in your Marketing Cloud, you still can learn using Query Activities in Automation Studio, but it will be much less user-friendly. For each change in the query, you will have to update the target Data Extension manually and go through multiple steps across the platform to see the results.
 
-My personal approach is to always start in [Query Studio](../config/sfmc-appexchange-solutions.mdx#query-studio) and only once my SQL Query is complete and validated I move it to Automation Studio.
+My approach is to always start in [Query Studio](../config/sfmc-appexchange-solutions.mdx#query-studio), and only once my SQL Query is complete and validated do I move it to Automation Studio.
 
 ## How to learn SFMC SQL
 
-SFMC SQL is very limited compared to full power of Structured Query Language, but there is still quite a lot of topics to cover. To make it easier, I split them into steps that slowly add more complex concepts. Still, every step should give you some tangible knowledge that you can actively use in your work.
+SFMC SQL is very limited compared to the full power of Structured Query Language, but there are still many topics to cover. I split them into steps that slowly add more complex concepts to make it easier. Each should provide knowledge that you can actively use in your day-to-day work.
 
-In each level you will see:
+In each level, you will see:
 
 1. Learning materials to read.
-2. Exercise you can do in your own Marketing Cloud platform to test your skills.
+2. Exercise you can do in your Marketing Cloud platform to test your skills.
 3. Hint that can help you with the exercise if you are stuck.
 4. Example solution to that exercise. Keep in mind that there might be more than one correct approach.
 
@@ -59,13 +59,13 @@ In each level you will see:
 
 ### Level 1 - SELECT, FROM, WHERE
 
-On this level you learn three most important SQL statements that are core for all queries. They will give you similar power to what Filters can do - with added bonus of choosing columns you need for your final segment.
+Learn the three essential SQL statements for all queries. They will give you similar power to what Filters can do - with the bonus of choosing the columns you need for your final segment.
 
 #### Learning materials
 
 - [SELECT](./sfmc-sql-select.mdx) - just the first part, before the aliasing section.
 - [FROM](./sfmc-sql-from.mdx) - whole article.
-- [WHERE](./sfmc-sql-where.mdx) - the first part, before the Basic Operators, plus [Equality Operators](./sfmc-sql-where.mdx#equality-operators) and [Logical Operators](./sfmc-sql-where.mdx#logical-operators). Don't worry about Comparison operators or shorthands for now. Don't worry about the examples with dates and unknown functions. We will get there. For now, think about how you can filter based on simple value, like status.
+- [WHERE](./sfmc-sql-where.mdx) - the first part, before the Basic Operators, plus [Equality Operators](./sfmc-sql-where.mdx#equality-operators) and [Logical Operators](./sfmc-sql-where.mdx#logical-operators). Don't worry about Comparison operators or shorthands for now. Don't worry about the examples with dates and unknown functions. We will get there. For now, think about how you can filter based on simple values like status.
 - [System Data Views](../config/sfmc-system-data-views.mdx) - the basics and [_Subscribers](../config/sfmc-system-data-views.mdx#_subscribers) Data View.
 
 #### Check your skills
@@ -88,7 +88,7 @@ Write a query that will find Subscriber Key for all Active (opted-in) Subscriber
 1. All Subscribers List data is stored in [_Subscribers](../config/sfmc-system-data-views.mdx#_subscribers) Data View.
 2. If you are running your query on a child Business Unit, you will need to use [`Ent.` prefix](./sfmc-sql-from.mdx#enterprise-system-data-views).
 3. You don't have to [SELECT](./sfmc-sql-select.mdx) any columns but the SubscriberKey. You can use [WHERE](./sfmc-sql-where.mdx) on not selected columns.
-4. Current status of a Subscriber is saved in `Status` column of [_Subscribers](../config/sfmc-system-data-views.mdx#_subscribers) Data View as a string. You can use it for filtering with [WHERE](./sfmc-sql-where.mdx).
+4. Current status of a Subscriber is saved in the `Status` column of [_Subscribers](../config/sfmc-system-data-views.mdx#_subscribers) Data View as a string. You can use it for filtering with [WHERE](./sfmc-sql-where.mdx).
 
 </TabItem>
 <TabItem value='solution'>
@@ -108,11 +108,11 @@ Bonus: you can change the last line to, for example, `WHERE Domain = 'gmail.com'
 
 ### Level 2 - JOIN, Aliasing, NULL
 
-On this level you learn how to leverage second Data Extension or Data View, how to change column name for the output and how to deal with basic `NULL` cases.
+Learn how to leverage a second Data Extension or Data View, change the output's column name, and deal with basic `NULL` cases.
 
 #### Learning materials
 
-- [JOIN](./sfmc-sql-join.mdx) - [JOIN Types](./sfmc-sql-join.mdx#join-types), [Joining ON](./sfmc-sql-join.mdx#joining-on) and [Table Name Prefixes](./sfmc-sql-join.mdx#table-name-prefix) sections. It might be helpful to check out the [visual cheatsheet](./sfmc-sql-join.mdx#sfmc-sql-join-cheat-sheet) as well.
+- [JOIN](./sfmc-sql-join.mdx) - [JOIN Types](./sfmc-sql-join.mdx#join-types), [Joining ON](./sfmc-sql-join.mdx#joining-on) and [Table Name Prefixes](./sfmc-sql-join.mdx#table-name-prefix) sections. It might be helpful to check out the [visual cheatsheet](./sfmc-sql-join.mdx#sfmc-sql-join-cheat-sheet).
 - [Aliasing](./sfmc-sql-select.mdx#aliasing-with-as) - just the Aliasing with AS and Custom values sections.
 - [NULL functions](./sfmc-sql-null-functions.mdx) - just the first three paragraphs and [IS NULL](./sfmc-sql-null-functions.mdx#is-null) section.
 - [_Sent](../config/sfmc-system-data-views.mdx#_sent), [_Open](../config/sfmc-system-data-views.mdx#_open) and [_Click](../config/sfmc-system-data-views.mdx#_click) Data Views.
@@ -136,10 +136,10 @@ Write a query that will find Subscriber Key for all Active (opted-in) Subscriber
 
 1. Don't write SQL from scratch. Leverage what you already have.
 2. Sent data is stored in [_Sent](../config/sfmc-system-data-views.mdx#_sent) Data View.
-3. You don't have to worry about 6 months requirement, because _Sent Data View is storing only 6 months of data.
+3. You don't have to worry about the 6-month requirement because _Sent Data View stores only six months of data.
 4. You can chain multiple filters using [`WHERE` Logical Operators](./sfmc-sql-where.mdx#logical-operators).
-5. [LEFT JOIN](./sfmc-sql-join.mdx#left-and-right-joins) will add columns even if there is no data in second table.
-6. You can find those records without data in second table using [`IS NULL`](./sfmc-sql-null-functions.mdx#is-null).
+5. [LEFT JOIN](./sfmc-sql-join.mdx#left-and-right-joins) will add columns even if there is no data in the second table.
+6. You can find those records without data in the second table using [`IS NULL`](./sfmc-sql-null-functions.mdx#is-null).
 7. You need to join tables [`ON`](./sfmc-sql-join.mdx#joining-on) a common value.
 
 </TabItem>
@@ -155,9 +155,9 @@ WHERE
     AND sent.EventDate IS NOT NULL
 ```
 
-This query can be written without filter on `sent.EventDate` but with `INNER JOIN _Sent` instead. Above version makes it easier for changing the query for the bonus below.
+You can write this query without the filter on `sent.EventDate` but with `INNER JOIN _Sent` instead. The above version makes it easier to change the query for the bonus below.
 
-Bonus: Change `IS NOT NULL` to `IS NULL` in the last line to see how many active Subsribers haven't received any communication in last 6 months. Might be nice segment for win-back journey!
+Bonus: Change `IS NOT NULL` to `IS NULL` in the last line to see how many active Subscribers haven't received any communication in the last 6 months. It's an excellent segment for the win-back Journey!
 
 </TabItem>
 </Tabs>
@@ -166,11 +166,11 @@ Bonus: Change `IS NOT NULL` to `IS NULL` in the last line to see how many active
 
 ### Level 3 - LIKE, CASE, Strings
 
-On this level you learn how to deal with string values, how to implement SQL version of if/else logic and how to make complex conditions calculating your own data. With this, you are no longer limited to the data already available in the tables.
+Learn how to deal with string values, how to implement SQL version of if/else logic and how to make complex conditions calculating your data. With this, you are no longer limited to the data already available in the tables.
 
 #### Learning materials
 
-- [LIKE](./sfmc-sql-like.mdx) - whole article, but focus on [LIKE with Wildcard](./sfmc-sql-like.mdx#like-with-wildcard), you will use it more. Check out also [LIKE operator in WHERE](./sfmc-sql-where.mdx#like-operator) section.
+- [LIKE](./sfmc-sql-like.mdx) - whole article, but focus on [LIKE with Wildcard](./sfmc-sql-like.mdx#like-with-wildcard), you will use it more. Check out also the [LIKE operator in WHERE](./sfmc-sql-where.mdx#like-operator) section.
 - [CASE](./sfmc-sql-case.mdx) - whole article plus [CASE operator in WHERE](./sfmc-sql-where.mdx#case-operator) section.
 - [String functions](./sfmc-sql-string-functions.mdx) - check out all, but focus on most frequently used [LEFT & RIGHT](./sfmc-sql-string-functions.mdx#left--right), [LEN](./sfmc-sql-string-functions.mdx#len) and [CHARINDEX](./sfmc-sql-string-functions.mdx#charindex).
 
@@ -186,11 +186,11 @@ On this level you learn how to deal with string values, how to implement SQL ver
 >
 <TabItem value='exercise'>
 
-Write a query that will find Subscriber Key for all Subscribers in your All Subscribers list and add a new column, called `SubscriberKeyType`. In that new column calculate whether the Subscriber Key is using email address, Salesforce ID (and in this case - source object) or other. Possible values should be: `Email`, `Account`, `Contact`, `User`, `Lead`, `Other`.
+Write a query that will find Subscriber Key for all Subscribers in your All Subscribers list and add a new column called `SubscriberKeyType`. In that new column, calculate whether the Subscriber Key is using an email address, Salesforce ID (and in this case - source object) or other. Possible values should be: `Email`, `Account`, `Contact`, `User`, `Lead`, and `Other`.
 
 :::note You Should Know
 
-For our need here, if the Subscriber Key has 18 characters, no `@` and starts with a three specific characters, it probably is a Salesforce ID. Th0se first three characters point to a specific Salesforce Object being a source of that record:
+For our need here, if the Subscriber Key has 18 characters, no `@`, and starts with three specific characters, it probably is a Salesforce ID. Those first three characters point to a specific Salesforce Object being a source of that record:
 
 - 001 = Account
 - 003 = Contact
@@ -203,9 +203,9 @@ For our need here, if the Subscriber Key has 18 characters, no `@` and starts wi
 <TabItem value='hints'>
 
 1. The easiest way to find an email is to use [LIKE with Wildcard](./sfmc-sql-like.mdx#like-with-wildcard) looking for `{something}@{domain}.{tld}`.
-2. [CASE](./sfmc-sql-case.mdx) returns value assigned to first scenario that matched, so the order of `WHEN`s makes a difference.
-3. You can use multiple conditions and [String functions](./sfmc-sql-string-functions.mdx) in `WHEN` checks.
-4. [CASE](./sfmc-sql-case.mdx) can create new column when you use it in [SELECT with an alias](./sfmc-sql-select.mdx#aliasing-with-as).
+2. [CASE](./sfmc-sql-case.mdx) returns the value assigned to the first matched scenario, so the order of `WHEN`s makes a difference.
+3. You can use multiple conditions and [String functions](./sfmc-sql-string-functions.mdx) in the `WHEN` checks.
+4. [CASE](./sfmc-sql-case.mdx) can create a new column when you use it in [SELECT with an alias](./sfmc-sql-select.mdx#aliasing-with-as).
 
 </TabItem>
 <TabItem value='solution'>
@@ -224,9 +224,9 @@ SELECT
 FROM _Subscribers
 ```
 
-While you could use `LIKE` for all the conditions, `LEFT` will perform better in this `CASE` because it will make a comparison only on the first three characters instead of anywhere in the whole string.
+While you could use `LIKE` for all the conditions, `LEFT` will perform better in this `CASE` because it will only compare the first three characters instead of anywhere in the whole string.
 
-This query is great to understand what is the source of your Subscribers. It will be even more useful later on, when you learn how to aggregate the data. With it, you will be able to quickly see exact numbers of subscribers from each source.
+This query is excellent for understanding what the source of your Subscribers is. It will be even more helpful later when you learn how to aggregate the data. With it, you will quickly see the exact number of subscribers from each source.
 
 </TabItem>
 </Tabs>
@@ -235,13 +235,13 @@ This query is great to understand what is the source of your Subscribers. It wil
 
 ### Level 4 - Dates, WHERE operators, Conversion
 
-On this level you learn how to use the most important filter of all - date filter. You also get to know basic date functions and what to do when you don't have the right data type for your use case.
+Learn how to use the most important filter of all - date filtering. Read about essential date functions and what to do when you don't have the correct data type for your use case.
 
 #### Learning materials
 
 - [Date functions](./sfmc-sql-date-functions.mdx) - [GETDATE](./sfmc-sql-date-functions.mdx#getdate--getutcdate) and [DATEADD](./sfmc-sql-date-functions.mdx#dateadd) are the most important sections.
 - [WHERE](./sfmc-sql-where.mdx) - while we already covered parts of where, this is time to make a deeper dive into [Comparison operators](./sfmc-sql-where.mdx#comparison-operators), [BETWEEN shorthand](./sfmc-sql-where.mdx#between-shorthand) and [IN shorthand](./sfmc-sql-where.mdx#in-shorthand).
-- [Conversion functions](./sfmc-sql-conversion-functions.mdx) - whole article, but treat Data Types and Data Style Codes more as a reference material.
+- [Conversion functions](./sfmc-sql-conversion-functions.mdx) - the whole article, but treat Data Types and Data Style Codes more as reference material.
 - [_Bounce](../config/sfmc-system-data-views.mdx#_bounce) Data View.
 
 #### Check your skills
@@ -256,16 +256,16 @@ On this level you learn how to use the most important filter of all - date filte
 >
 <TabItem value='exercise'>
 
-Write a query that will find Subscriber Key for all Subscribers in your All Subscribers list that joined the list within last year and had a bounce on Google or Microsoft email between the first day of current month (write that date manually, as a string) and today.
+Write a query that will find Subscriber Key for all Subscribers in your All Subscribers list that joined the list within the last year and had a bounce on Google or Microsoft email between the first day of the current month (write that date manually, as a string) and today.
 
-For the purpose of this exercise we will assume that Google users have emails `something@gmail.com`, Microsoft users - `something@outlook.com` and Yahoo - `something@yahoo.com`.
+For this exercise, we will assume that Google users have emails like `something@gmail.com`, Microsoft users - `something@outlook.com` and Yahoo - `something@yahoo.com`.
 
 </TabItem>
 <TabItem value='hints'>
 
 1. Consider impact of the [JOIN type](./sfmc-sql-join.mdx#join-types) on the query output. Can you leverage it to minimise the data you are working on?
-2. When writing date comparision filter, take a pen and paper and draw a timeline with area you want to capture. Seeing it makes it much easier to write it correctly.
-3. When deciding on whether to use shorthands - go with the most readable option.
+2. When writing the date comparison, take a pen and paper and draw a timeline with the part you want to capture. Seeing it makes it much easier to write it correctly.
+3. When deciding whether to use shorthands - go with the most readable option.
 
 </TabItem>
 <TabItem value='solution'>
@@ -290,11 +290,11 @@ Bonus: Dive deeper into bounces by selecting SMTPBounceReason and SMTPMessage in
 
 ### Level 5 - Multiple JOINS, UNION, INTERSECT and EXCEPT
 
-On this level you will be able to leverage data from multiple tables - the only limitations will be creativity and autokill function crashing queries after 30 minutes of execution ;)
+Learn to leverage data from multiple tables - the only limitations will be creativity and autokill function crashing queries after 30 minutes of execution ;)
 
 #### Learning materials
 
-- [JOINs](./sfmc-sql-join.mdx#multiple-joins) - yup, everything. The Cheat Sheet at the end should be useful to better visualize multi-JOIN fun.
+- [JOINs](./sfmc-sql-join.mdx#multiple-joins) - yup, everything. The Cheat Sheet at the end should be useful to visualise multi-JOIN fun better.
 - [Journey Builder Data Views](../config/sfmc-system-data-views.mdx#journey-data-views) - both _Journey and _JourneyActivity.
 
 #### Check your skills
@@ -309,7 +309,7 @@ On this level you will be able to leverage data from multiple tables - the only 
 >
 <TabItem value='exercise'>
 
-Find some active Journey from the last quarter that already had some email sends with engagement. Note name of the Journey and Email Acitvity.
+Find some active Journey from the last quarter that already had some email sends with engagement. Note the name of the Journey and Email Activity.
 
 Write a query that will find Subscriber Key and Email Address for all Subscribers in your All Subscribers list that clicked a link in the first email activity in the Journey you selected.
 
@@ -318,10 +318,11 @@ Append a proof record with Subscriber Key equal to `level5exercise` and your ema
 </TabItem>
 <TabItem value='hints'>
 
-1. Think which tables are needed for the task. The less, the better.
-2. Think what [types of JOINs](./sfmc-sql-join.mdx#join-types) will be needed. To make it easier - take a pen and paper and draw a diagram. Seriously, it's super helpful as amount of tables grow.
-3. Think on what columns you can join the tables in a way that will protect you from the fan out (one to many relationship that results with more rows then needed in the output).
+1. Think about which tables you need for the task. The less, the better.
+2. Think what [types of JOINs](./sfmc-sql-join.mdx#join-types) will be needed. To make it easier - take a pen and paper and draw a diagram. Seriously, it's super helpful as the number of tables grows.
+3. Think about what columns you can join the tables in a way that will protect you from the fan out (a one-to-many relationship that results in more rows than needed in the output).
 4. [UNION](./sfmc-sql-join.mdx#union) with [aliases](./sfmc-sql-select.mdx#aliasing-with-as) is great for arbitrary added records in SQL.
+
 
 </TabItem>
 <TabItem value='solution'>
@@ -358,12 +359,12 @@ Bonus: the fun with multiple joins [never ends](./snippets/sfmc-sql-debugging-em
 
 ### Level 6 - GROUP, COUNT, TOP and HAVING
 
-On this level you graduate from just playing with rows and start calculating the data to see patterns, outliers and problems. This is especially useful for SFMC Administrators and Consultants performing analysis on the platform data.
+Graduate from just playing with rows and start calculating the data to see patterns, outliers and problems. It is handy for SFMC Administrators and Consultants performing analysis on the platform data.
 
 #### Learning materials
 
 - [Aggregate functions](./sfmc-sql-aggregate-functions.mdx) - focus on [GROUP BY](./sfmc-sql-aggregate-functions.mdx#group-by), [COUNT](./sfmc-sql-aggregate-functions.mdx#count) and [HAVING](./sfmc-sql-aggregate-functions.mdx#having).
-- [Order of operations](#order-of-operations) - this is the moment when it becomes tricky.
+- [Order of operations](#order-of-operations) - this is when it becomes tricky.
 - [TOP](./sfmc-sql-select.mdx#top) - focus on how to use it with [ORDER BY](./sfmc-sql-select.mdx#top-with-order-by)
 
 #### Check your skills
@@ -378,18 +379,21 @@ On this level you graduate from just playing with rows and start calculating the
 >
 <TabItem value='exercise'>
 
-Find the number of sends, unique bounces and the bounce rate (percent of bounces vs sends) per domain from deliveries attempted in the last month. Filter the records to only those who have at least 100 sends. Order by the bounce rate descending and limit to 20 records.
+Find the number of sends, unique bounces, and the bounce rate (percent of bounces vs sends) per domain from deliveries attempted in the last month. Filter the records to only those Domains with at least 100 sends. Order by the bounce rate descending and limit to the top 20 records.
 
-If you have huge send volumes, feel free to change the timeframe from last month to last week for the purpose of the exercise.
+If you send huge volumes, feel free to change the timeframe from last month to last week for the exercise.
 
 </TabItem>
 <TabItem value='hints'>
 
-1.
+1. Build query step by step and validate the output. In this case, it might be easiest to write SELECT for just the Domain with the suitable tables and date filter, then add the GROUP BY to validate aggregation and then go with additional aggregate functions.
+2. All calculated values require an [alias](./sfmc-sql-select.mdx#aliasing-with-as).
+3. Pick the right [type of JOIN](./sfmc-sql-join.mdx#join-types) and correct set of joining rules so that you get precisely those rows that you need (limit the fan-out created by the possibility of many bounces per single send).
+4. When building the date filter, the output will be completely different depending on which date you use (hopefully, not every send will have a bounce).
+5. Unfortunately, in SFMC, you cannot use alias in WHERE/HAVING/ORDER BY and similar places - you have to use the function/calculation.
+6. When calculating Bounce Rate, do it so that the outcome is an integer equal to a percent.
 
-9. When calculating Bounce Rate, do it so that the outcome is integer equal to a percent.
-
-Important: Because of the Query Studio bug, you cannot have spaces around the multiplication symbol (`*`) as otherwise you will be seeing an error related to bad practice SELECTs.
+Important: Because of the Query Studio bug, you cannot have spaces around the multiplication symbol (`*`); otherwise, you will see an error related to a bad practice blanket SELECTs.
 
 </TabItem>
 <TabItem value='solution'>
@@ -413,7 +417,7 @@ HAVING COUNT(s.EventDate) >= 100
 ORDER BY COUNT(b.EventDate)*100/COUNT(s.EventDate) DESC
 ```
 
-Bonus: This query might be performance heavy. One option to make it perform better is to shorten the timeframe in WHERE fitler. Another would be to split this query into two - one getting cumulative counts and second responsible for doing math for Bounce Rate.
+Bonus: This query might be performance heavy. One option to make it perform better is to shorten the timeframe in the WHERE filter. Another would be to split this query into two - one getting cumulative counts and the second responsible for doing math for Bounce Rate. Also, check how the numbers change when selecting only Hard Bounces.
 
 </TabItem>
 </Tabs>
@@ -422,7 +426,7 @@ Bonus: This query might be performance heavy. One option to make it perform bett
 
 ### Level 7 - coming soon-ish
 
-More levels will be added once I finsih writing supporting learning materials :)
+I will add more levels once I finish writing supporting learning materials :)
 
 ---
 
@@ -436,7 +440,7 @@ One of the key things to remember when building more complex queries is the orde
 
 [`FROM`](./sfmc-sql-from.mdx) > [`WHERE`](./sfmc-sql-where.mdx) > [`GROUP BY`](#group-by) > [`HAVING`](#having) > [`DISTINCT`](./sfmc-sql-select.mdx#distinct) > [`ORDER BY`](./sfmc-sql-select.mdx#top-with-order-by)
 
-It means that rows filtered with `WHERE` will not be taken into consideration for `GROUP BY` and that `DISTINCT` deduplication will be applied to results grouped and filtered by `HAVING` - not the source data.
+It means that rows filtered with `WHERE` will not be considered for `GROUP BY` and that `DISTINCT` deduplication will be applied to results grouped and filtered by `HAVING` - not the source data.
 
 ## All SQL Guides
 
