Registration page for a new webinar

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -2,16 +2,16 @@
 id: sfmc-webinar-account-architecture
 title: SFMC Account Architecture
 sidebar_label: Account Architecture
-description: WIP.
+description: Learn how to structure your Marketing Cloud Account to make the most of the Business Units, Marketing Cloud Connect and deliverability features.
 image: img/og/og-image-webinar-account-architecture.png
-tags: [Marketing Cloud, Setup, Configuration, Deliverability]
+tags: [Webinar, Marketing Cloud, Setup, Configuration, Deliverability]
 ---
 
 import { Button } from '../../src/components/Buttons.js';
 import { LeadText } from '../../src/components/LeadText.js';
 import { YouTube } from '../../src/components/VideoEmbed.js';
 
-<LeadText content="WIP" />
+<LeadText content="Learn how to structure your Marketing Cloud Account to make the most of the Business Units, Marketing Cloud Connect and deliverability features." />
 
 ## Table of Contents
 
