--- a/docs/webinars/sfmc-webinar-architecting-web-solutions.mdx
+++ b/docs/webinars/sfmc-webinar-architecting-web-solutions.mdx
@@ -4,7 +4,7 @@ title: Architecting Web Solutions in SFMC
 sidebar_label: Architecting Web Solutions
 description: Learn how to make the most out of Marketing Cloud Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources.
 image: img/og/og-image-webinar-architecting-web-solutions.png
-tags: [Marketing Cloud, Best Practice, AMPScript, SSJS, JS, Cloud Page]
+tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, SSJS, JS, Cloud Page]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
