--- a/docs/webinars/sfmc-webinar-cloud-page-apps.mdx
+++ b/docs/webinars/sfmc-webinar-cloud-page-apps.mdx
@@ -4,7 +4,7 @@ title: SFMC Cloud Page Apps
 sidebar_label: Cloud Page Apps
 description: Learn how and when to create a custom application for your SFMC users using Cloud Pages, Code Resources and Installed Packages.
 image: img/og/og-image-webinar-cloud-page-apps.png
-tags: [Marketing Cloud, AppExchange, SSJS, Cloud Page, App, Snippet, Configuration]
+tags: [Webinar, Marketing Cloud, AppExchange, SSJS, Cloud Page, App, Snippet, Configuration]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
