More actionable CTA for webinar registration

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -28,7 +28,7 @@ Webinar will go live on Saturday, 28 January 2023, 9:30 AM GMT.
 
 <Button
     link='https://trailblazercommunitygroups.com/events/details/salesforce-salesforce-marketer-group-pardot-singapore-singapore-presents-episode-06-sfmc-bootcamp-salesforce-marketing-cloud-infrastructure-setup-org-setup/'
-    text='Register now'
+    text='Register here'
 />
 
 ## Materials
