Post-webinar update of content and promo

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -20,20 +20,16 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 3. Single-Org vs Multi-Org
 4. Marketing Cloud Connect Patterns
 5. SAP, Private Domains & IPs
-6. IP Warmup & Deliverability
+6. Deliverability & IP Warmup
 
-## Registration
+## Video
 
-Webinar will go live on Saturday, 28 January 2023, 9:30 AM GMT.
-
-<Button
-    link='https://trailblazercommunitygroups.com/events/details/salesforce-salesforce-marketer-group-pardot-singapore-singapore-presents-episode-06-sfmc-bootcamp-salesforce-marketing-cloud-infrastructure-setup-org-setup/'
-    text='Register here'
-/>
+{/* <YouTube videoId="" title="SFMC Account Architecture Webinar Recording" /> */}
+Coming soon
 
 ## Materials
 
 28 January 2023 | Salesforce Marketing Cloud Infrastructure Setup - Org Setup
 - | -
-Recording | Will be added after the webinar
-Slides | Will be added after the webinar
+Recording | Coming soon
+Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2023-01%5D%20SFMC%20Account%20Architecture.pdf)
