Recording of SFMC Account Architecture Webinar

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -7,7 +7,6 @@ image: img/og/og-image-webinar-sfmc-account-architecture.png
 tags: [Webinar, Marketing Cloud, Setup, Configuration, Deliverability]
 ---
 
-import { Button } from '../../src/components/Buttons.js';
 import { LeadText } from '../../src/components/LeadText.js';
 import { YouTube } from '../../src/components/VideoEmbed.js';
 
@@ -24,12 +23,12 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Video
 
-{/* <YouTube videoId="" title="SFMC Account Architecture Webinar Recording" /> */}
-Coming soon
+<YouTube videoId="dRxcbwIA1K0" title="SFMC Account Architecture Webinar Recording" />
 
 ## Materials
 
 28 January 2023 | Salesforce Marketing Cloud Infrastructure Setup - Org Setup
 - | -
-Recording | Coming soon
+Recording | [YouTube](https://www.youtube.com/watch?v=dRxcbwIA1K0&list=PLOWi4YJyd0lTtKyr72NHpOawIsoGjbuwr&index=6)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2023-01%5D%20SFMC%20Account%20Architecture.pdf)
+Articles | Salesforce Architects blog on [Business Units](https://medium.com/salesforce-architects/adopting-business-units-in-marketing-cloud-98eac8eda216) and [Marketing Cloud Connect](https://medium.com/salesforce-architects/implementing-marketing-cloud-with-multiple-salesforce-orgs-part-1-cf8637cf0985)<br/>Salesforce Documentation on [Multi-Org Considerations](https://help.salesforce.com/s/articleView?id=sf.mc_co_faqs_for_multi_org.htm)
